# detect_flake

./: .envrc  CHANGELOG.md  Cargo.toml  LICENSE  README  README.md  flake.nix  release.toml  test_script.js
.github/workflows/: release.yml
src/: command.rs  gui.rs  main.rs  message.rs  opt.rs  runner.rs
wix/: main.wxs
