[package]
name = "detect_flake"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Run many instances of the same command in parallel to find abnormal behavior or check if a test is flaky"
authors = ["Alexey Orlenko <alex@aqrln.net>"]
repository = "https://github.com/aqrln/detect_flake"
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::testing"]
keywords = ["testing", "flake", "flaky", "stress-test"]

[dependencies]
crossbeam-channel = "0.5.1"
indicatif = "0.16.2"
structopt = "0.3.25"
