[package]
name = "detect_flake"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Run many instances of the same command in parallel to find abnormal behavior or check if a test is flaky"
authors = ["Alexey Orlenko <alex@aqrln.net>"]
repository = "https://github.com/aqrln/detect_flake"
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::testing"]
keywords = ["testing", "flaky", "stress-test"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
crossbeam-channel = "0.5.6"
indicatif = "0.17.2"
