[package]
name = "detect_flake"
version = "0.5.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Run many instances of the same command in parallel to find abnormal behavior or check if a test is flaky"
authors = ["Alexey Orlenko <alex@aqrln.net>"]
repository = "https://github.com/aqrln/detect_flake"
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::testing"]
keywords = ["testing", "flaky", "stress-test"]

[package.metadata.wix]
upgrade-guid = "659127AF-0F8B-43C2-B02C-E24295FD6ADA"
path-guid = "B4643503-D1B3-424E-8141-2D17006C7EF3"
license = false
eula = false

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
crossbeam-channel = "0.5.8"
indicatif = "0.17.7"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "aqrln/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-unknown-linux-musl",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-4vcpu-ubuntu-2204-arm"
aarch64-unknown-linux-musl = "buildjet-4vcpu-ubuntu-2204-arm"
